Fix overflow

--- a/scss/_extra_large.scss
+++ b/scss/_extra_large.scss
@@ -9,4 +9,7 @@
         0%   { transform: translateX(1800px) }
         100%   { transform: translateX(-1800px) }
       }
+      .delivered-graphic {
+        overflow: visible;
+      }
 }
