--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -9,4 +9,7 @@
         0%   { transform: translateX(1500px) }
         100%   { transform: translateX(-1500px) }
       }
+      .delivered-graphic {
+        overflow: visible;
+      }
 }
